--- a/前端模块化管理.md
+++ b/前端模块化管理.md
@@ -1,7 +1,7 @@
 ---
-title: SeaJS与RequireJS
+title: CommonJS,AMD模块化规范
 date: 2016-05-26 09:58:04
-tags: [前端, 模块化, SeaJS, RequireJS]
+tags: [前端, 模块化, SeaJS, RequireJS, CommonJS]
 ---
 [TOC]
 
